[package]
name = "whirlwind"
description = "Collection of thread-safe, asynchronous data structures."
authors = ["Will Hopkins <will@fortress.build>"]
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/fortress-build/whirlwind"
license = "Apache-2.0"
keywords = ["async", "hashmap", "sharding"]
categories = ["asynchronous", "concurrency", "data-structures"]


[dependencies]
crossbeam-utils = "0.8.20"
hashbrown = { version = "0.15.1" }
tokio = { version = "1.41.0", features = ["sync"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
